fix: 댓글 dto 수정, 대댓글 로직 수정